--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <div class="container">
+      <header>
+        <div class="title">
+          <p>Rock</p>
+          <p>Paper</p>
+          <p>Scissors</p>
+        </div>
+        <div class="scores">
+          <p>Computer: <span id="computer_score">0</span></p>
+          <p>User: <span id="user_score">0</span></p>
+        </div>
+      </header>
+      <div class="weapons">
+        <button><i class="far fa-hand-rock"></i></button>
+        <button><i class="far fa-hand-paper"></i></button>
+        <button><i class="far fa-hand-scissors"></i></button>
+      </div>
+      <div class="details">
+        <p id="user_choice"></p>
+        <p id="computer_choice"></p>
+        <p id="result"></p>
+      </div>
+    </div>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
