--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
         </div>
       </header>
       <div class="weapons">
-        <button><i class="far fa-hand-rock"></i></button>
-        <button><i class="far fa-hand-paper"></i></button>
-        <button><i class="far fa-hand-scissors"></i></button>
+        <button onclick="clicked('Rock')"><i class="far fa-hand-rock"></i></button>
+        <button onclick="clicked('Paper')"><i class="far fa-hand-paper"></i></button>
+        <button onclick="clicked('Scissors')""><i class="far fa-hand-scissors"></i></button>
       </div>
       <div class="details">
-        <p id="user_choice"></p>
         <p id="computer_choice"></p>
+
+        <p id="user_choice"></p>
         <p id="result"></p>
       </div>
     </div>
